# benchmark

./: benchmark.py  config.yaml  pyproject.toml
models/: __init__.py  deeplog.py  loganomaly.py  logcnn.py  logrobust.py  neurallog.py  plelog.py  spikelog.py  spikelog_v2.py
profilers/: __init__.py  pytorch_profiler.py  spike_profiler.py
results/: benchmark-20260411-233108.json  benchmark-20260411-233128.json  benchmark-20260411-233328.json  benchmark-20260411-235643.json  benchmark-20260411-235802.json  benchmark-20260411-235826.json  benchmark-20260418-140146.json  usb_benchmark.json
